worked on VQ-3897

--- a/src/app/features/fms/components/client-allocation/client-allocation.component.html
+++ b/src/app/features/fms/components/client-allocation/client-allocation.component.html
@@ -274,9 +274,9 @@
         "
         class="allocations-section"
       >
-        <h3 class="allocations-title">
+        <h5 class="text-primary text-start mb-3">
           {{ "fms.receipting.allocations" | translate }}
-        </h3>
+        </h5>
         <!-- <div *ngIf="isAllocationCompleted && getAllocation && getAllocation.length > 0" class="row mt-4"> -->
         <!-- <h3 class="text-primary text-start fs-4">Allocations</h3> -->
 
