--- a/src/app/features/gis/components/quotation/components/quotation-management/quotation-management.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-management/quotation-management.component.html
@@ -4,72 +4,93 @@
       <div class="card mb-3" style=" position: relative;">
         <div class="card-body">
           <p-table [value]="gisQuotationList" [paginator]="true" [rows]="15" [scrollable]="true"
-            scrollDirection="horizontal" [showCurrentPageReport]="true" [tableStyle]="{'min-width': '100rem'}"
+            scrollDirection="horizontal" [showCurrentPageReport]="true" [tableStyle]="{'max-width': '150rem'}"
             currentPageReportTemplate=" {first} - {last} of {totalRecords}" [responsiveLayout]="'scroll'"
             [resizableColumns]="true" [reorderableColumns]="true">
             <ng-template pTemplate="header">
               <tr>
-                <th style="background-color: #f0f0f0; width: 200px;" pSortableColumn="quotation_number" class="flexible-header">{{ 'gis.quotation.quotation_number' | translate }}</th>
-                <th style="background-color: #f0f0f0; width: 250px;" pSortableColumn="client" class="flexible-header">{{ 'gis.quotation.client' | translate }}</th>
-                <th style="background-color: #f0f0f0; width: 250px;" pSortableColumn="agent" class="flexible-header">{{ 'gis.quotation.agent' | translate }}</th>
-                <th style="background-color: #f0f0f0; width: 200px;" pSortableColumn="cover_from" class="flexible-header">{{ 'gis.quotation.cover_from' | translate }}</th>
-                <th style="background-color: #f0f0f0; width: 200px;" pSortableColumn="cover_to" class="flexible-header">{{ 'gis.quotation.cover_to' | translate }}</th>
-                <th style="background-color: #f0f0f0; width: 150px;" pSortableColumn="status" class="flexible-header">{{ 'gis.quotation.status' | translate }}</th>
-                <th style="background-color: #f0f0f0; width: 150px;" pSortableColumn="premium" class="flexible-header text-end">{{ 'gis.quotation.premium' | translate }}</th>
-                <th style="background-color: #f0f0f0; width: 150px;" class="flexible-header text-end">Actions</th>
+                <th style="background-color: #f0f0f0; " pSortableColumn="quotation_number" class="flexible-header">{{ 'gis.quotation.quotation_number' | translate }}</th>
+                <th style="background-color: #f0f0f0; " pSortableColumn="client" class="flexible-header">{{ 'gis.quotation.client' | translate }}</th>
+                <th style="background-color: #f0f0f0; " pSortableColumn="agent" class="flexible-header">{{ 'gis.quotation.agent' | translate }}</th>
+                <th style="background-color: #f0f0f0; " pSortableColumn="cover_from" class="flexible-header">{{ 'gis.quotation.cover_from' | translate }}</th>
+                <th style="background-color: #f0f0f0; " pSortableColumn="cover_to" class="flexible-header">{{ 'gis.quotation.cover_to' | translate }}</th>
+                <th style="background-color: #f0f0f0; " pSortableColumn="status" class="flexible-header">{{ 'gis.quotation.status' | translate }}</th>
+                <th style="background-color: #f0f0f0; " pSortableColumn="premium" class="flexible-header text-end">{{ 'gis.quotation.premium' | translate }}</th>
+                <th style="background-color: #f0f0f0; " class="flexible-header text-end">Actions</th>
               </tr>
               <tr class="mb-5 mt-5">
-                <th style="background-color: #ffffff; width: 200px;">
+                <th style="background-color: #ffffff;">
                   <input type="text" class="form-control" style="width: 100%;"
                     (keyup.enter)="fetchGISQuotations();"
                     (input)="inputQuotationNo($event)" >
                 </th>
-                <th style="background-color: #ffffff; width: 250px;">
+                <th style="background-color: #ffffff;">
                   <div class="position-relative">
-                    <input type="text" id="quote-input" class="form-select form-control" style="width: 100%;"
+                    <input type="text" id="quote-input" class="form-select form-control custom-select" style="width: 100%;"
                       [value]="displayClientName" data-bs-toggle="modal" data-bs-target="#clientSearchModal" readonly
                       (keyup.enter)="fetchGISQuotations();" />
-                    <button *ngIf="clientName" class="btn btn-sm position-absolute" style="right: 30px; top: 50%; transform: translateY(-50%); background: none; border: none;" (click)="clearClientName()">
+                    
+                    <!-- Clear button with X icon - only shows when there's a value -->
+                    <button *ngIf="displayClientName" class="btn btn-sm position-absolute clear-btn" 
+                      style="right: 0.75rem; top: 50%; transform: translateY(-50%); background: none; border: none; cursor: pointer; z-index: 5;" 
+                      (click)="clearClientName()">
                       <i class="pi pi-times"></i>
                     </button>
+                    
                     <!-- Client Search Modal Component -->
                     <app-client-search-modal (clientSelected)="onClientSelected($event)"></app-client-search-modal>
                   </div>
                 </th>
-                <th style="background-color: #ffffff; width: 250px;">
+                <th style="background-color: #ffffff;">
                   <div class="position-relative">
-                    <input type="text" id="quote-input" class="form-select form-control" style="width: 100%;"
-                    [value]="displayAgentName" data-bs-toggle="modal" data-bs-target="#agentSearchModal" readonly
-                    (keyup.enter)="fetchGISQuotations();" />
-                    <button *ngIf="agentName" class="btn btn-sm position-absolute" style="right: 30px; top: 50%; transform: translateY(-50%); background: none; border: none;" (click)="clearAgentName()">
+                    <input type="text" id="quote-input" class="form-select form-control custom-select" style="width: 100%;"
+                      [value]="displayAgentName" data-bs-toggle="modal" data-bs-target="#agentSearchModal" readonly
+                      (keyup.enter)="fetchGISQuotations();" />
+                    
+                    <!-- Clear button with X icon - only shows when there's a value -->
+                    <button *ngIf="displayAgentName" class="btn btn-sm position-absolute clear-btn" 
+                      style="right: 0.75rem; top: 50%; transform: translateY(-50%); background: none; border: none; cursor: pointer; z-index: 5;" 
+                      (click)="clearAgentName()">
                       <i class="pi pi-times"></i>
                     </button>
+                    
                     <!-- Agent Search Modal Component -->
                     <app-agent-search-modal (agentSelected)="onAgentSelected($event)"></app-agent-search-modal>
                   </div>
                 </th>
-                <th style="background-color: #ffffff; width: 200px;">
+                <th style="background-color: #ffffff;">
                   <p-calendar name="withEffectiveFromDate" [(ngModel)]="fromDate" [dateFormat]="dateFormat"
                     [showIcon]="true" [showButtonBar]="true" [minDate]="minDate"
                     (onSelect)="onDateFromInputChange($event)" (onClear)="clearDateFilters()" appendTo="body"
-                    (keyup.enter)="fetchGISQuotations();" [showClear]="true"
+                    (keyup.enter)="fetchGISQuotations();"
                     [style]="{'width': '100%'}">
                   </p-calendar>
                 </th>
-                <th style="background-color: #ffffff; width: 200px;">
+                <th style="background-color: #ffffff;">
                   <p-calendar name="withEffectiveToDate" [(ngModel)]="toDate" [dateFormat]="dateFormat" [showIcon]="true"
-                    [showButtonBar]="true" [minDate]="minToDate" appendTo="body" [showClear]="true"
+                    [showButtonBar]="true" [minDate]="minToDate" appendTo="body"
                     (onSelect)="onDateToInputChange($event)" (onClear)="clearDateFilters()" (keyup.enter)="fetchGISQuotations();"
                     [style]="{'width': '100%'}">
                   </p-calendar>
                 </th>
-                <th style="background-color: #ffffff; width: 200px;">
-                  <p-dropdown [options]="status" optionLabel="status" optionValue="status" [filter]="true"
-                    filterBy="status" [(ngModel)]="selectedStatus" appendTo="body"
+                <th style="background-color: #ffffff;">
+                  <p-dropdown [options]="status" 
+                    optionLabel="status" 
+                    optionValue="status" 
+                    [filter]="true"
+                    filterBy="status" 
+                    [(ngModel)]="selectedStatus" 
+                    appendTo="body"
                     [style]="{ 'width': '100%', 'height': '35px' }"
-                    (onChange)="onStatusSelected($event.value)" (keyup.enter)="fetchGISQuotations();"
-                    [showClear]="true">
+                    (onChange)="onStatusSelected($event.value)" 
+                    (keyup.enter)="fetchGISQuotations();"
+                    [showClear]="true"
+                    styleClass="custom-dropdown">
                   </p-dropdown>
+                </th>
+                <th></th>
+                <th style="background-color: #ffffff;" class="text-end">
+                  <button type="button" class="btn btn-sm  btn-outline-primary" (click)="clearFilters();">{{ 'gis.quotation.clear' | translate }}</button>
                 </th>
               </tr>
             </ng-template>
